# 4d-digital-praxinoscope-written-in-c

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  server.sh  shell.nix  start.py  start.sh  sync.sh  test.py  todo.md
display_client/: main.js  package.json
display_client/web/: index.html  preload.js  renderer.js
server/: server.js
server/admin_panel/: index.html  style.css
src/: animation.rs  app.rs  export.rs  input.rs  main.rs  utils.rs
src/models/: mod.rs  notification.rs  stroke.rs
src/ui/: canvas.rs  mod.rs  panels.rs
