[package]
name = "drawing_app_egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.30.0"
egui = "0.30.0"
egui_extras = { version = "0.30.0", features = ["all_loaders"] }
env_logger = "0.11.6"
image = "0.25.5"
reqwest = { version = "0.12.12", features = ["blocking", "multipart"] }
tiny-skia = "0.11.4"
